--- a/IIFYM_Tracker/src/main/res/layout/content_home.xml
+++ b/IIFYM_Tracker/src/main/res/layout/content_home.xml
@@ -179,7 +179,7 @@
             app:rcProgressColor="@color/CarbProgressColor"
             app:rcSecondaryProgressColor="@color/CarbSecondaryProgressColor"
             app:rcBackgroundColor="@color/Progress_Bar_Background"
-            app:rcIconSrc="@drawable/carbs"
+            app:rcIconSrc="@drawable/icon_carbs"
             app:rcIconSize="35dp"
             app:rcIconWidth="35dp"
             app:rcIconHeight="35dp"
@@ -257,7 +257,7 @@
             app:rcProgressColor="@color/ProteinProgessColor"
             app:rcSecondaryProgressColor="@color/ProteinSecondaryProgressColor"
             app:rcBackgroundColor="@color/Progress_Bar_Background"
-            app:rcIconSrc="@drawable/protein"
+            app:rcIconSrc="@drawable/icon_protein"
             app:rcIconSize="35dp"
             app:rcIconWidth="35dp"
             app:rcIconHeight="35dp"
@@ -335,7 +335,7 @@
             app:rcProgressColor="@color/FatProgessColor"
             app:rcSecondaryProgressColor="@color/FatSecondaryProgressColor"
             app:rcBackgroundColor="@color/Progress_Bar_Background"
-            app:rcIconSrc="@drawable/fat"
+            app:rcIconSrc="@drawable/icon_fat"
             app:rcIconSize="35dp"
             app:rcIconWidth="35dp"
             app:rcIconHeight="35dp"
