--- a/IIFYM_Tracker/src/main/res/menu/menu_home_man.xml
+++ b/IIFYM_Tracker/src/main/res/menu/menu_home_man.xml
@@ -11,18 +11,18 @@
         android:orderInCategory="100"
         android:title="@string/Macro_settings"
         app:showAsAction="always"
-        android:icon="@drawable/macrosettings_icon"
+        android:icon="@drawable/icon_macrosettings"
         />
     <item
         android:id="@+id/action_MealSettings"
         android:orderInCategory="100"
         android:title="@string/Meal_settings"
         app:showAsAction="always"
-        android:icon="@drawable/mealsettings_icon"
+        android:icon="@drawable/icon_mealsettings"
         />
     <item android:title="Profile"
         android:id="@+id/profile_menu_btn"
         app:showAsAction="always"
-        android:icon="@drawable/man"
+        android:icon="@drawable/icon_user_male"
         android:orderInCategory="101" />
 </menu>
