Worked more on activityLogin and activityUserInfo and activityUserMacros

--- a/IIFYM_Tracker/src/main/res/layout/activity_login.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:background="@color/LoginScreen_Backgroud">
 
         <TextView
-            android:text="@string/app_name"
+            android:text="@string/appName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblAppName"
@@ -25,7 +25,7 @@
             android:textColor="@color/colorPrimary" />
 
         <TextView
-            android:text="@string/app_subtitle"
+            android:text="@string/appSubtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblAppSubtitle"
@@ -64,7 +64,8 @@
             app:layout_constraintRight_toRightOf="parent"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
             android:fontFamily="sans-serif"
-            android:textColorHint="@color/colorPrimary" />
+            android:textColorHint="?android:attr/textColorHint"
+            android:textColor="?attr/colorPrimary" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -75,7 +76,7 @@
             android:hint="Password"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
             android:fontFamily="sans-serif"
-            android:textColorHint="@color/colorPrimary"
+            android:textColorHint="?android:attr/textColorHint"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
@@ -83,10 +84,11 @@
             app:layout_constraintTop_toBottomOf="@+id/email_edittext"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            android:textColor="?attr/colorPrimary" />
 
         <Button
-            android:text="Register"
+            android:text="@string/btnImNew"
             android:layout_width="95dp"
             android:layout_height="wrap_content"
             android:id="@+id/Button_Register"
@@ -151,7 +153,7 @@
         <ImageButton
             android:layout_width="35dp"
             android:layout_height="35dp"
-            app:srcCompat="@drawable/google_icon"
+            app:srcCompat="@drawable/icon_google"
             android:id="@+id/google_signup_button"
             android:background="@color/Transparent"
             android:scaleType="centerCrop"
