--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -19,18 +19,17 @@
         android:paddingEnd="@dimen/activity_horizontal_margin" />
 
     <EditText
-        android:layout_width="match_parent"
         android:inputType="textPersonName"
-        android:ems="10"
+        android:ems="8"
         android:id="@+id/etxtName"
-        android:hint="@string/name"
+        android:hint="@string/firstname"
         android:textColorHint="?android:attr/textColorHint"
         android:textAppearance="@android:style/TextAppearance.Medium"
-        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_gravity="left|center_vertical"
         android:textColor="?attr/colorPrimary"
         android:layout_height="50dp"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin" />
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="14dp" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -47,20 +46,20 @@
             android:id="@+id/lblDOB"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:layout_gravity="center_vertical|center_horizontal" />
 
-        <TextView
-            android:text="@string/dateInitial"
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/lblDateChosen"
-            android:textAppearance="@android:style/TextAppearance.Medium"
-            android:textColor="?attr/colorPrimary"
+            android:inputType="textPersonName"
+            android:text="@string/dateOfBirth"
+            android:ems="10"
+            android:id="@+id/etxtDateOfBirth"
+            android:layout_weight="0.5"
             android:drawableLeft="@drawable/icon_calendar"
             android:drawablePadding="2dp"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical|center_horizontal" />
+            android:textColor="?attr/colorPrimary" />
 
     </LinearLayout>
 
@@ -191,7 +190,8 @@
                 android:textColor="?attr/colorPrimary"
                 android:textColorHint="?android:attr/textColorHint"
                 android:layout_weight="0.8"
-                android:layout_gravity="center_vertical|center_horizontal" />
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:textAlignment="center" />
 
             <TextView
                 android:text="@string/kg"
@@ -220,7 +220,8 @@
                 android:textColorHint="?android:attr/textColorHint"
                 android:layout_width="wrap_content"
                 android:layout_weight="0.8"
-                android:layout_gravity="center_vertical|center_horizontal" />
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:textAlignment="center" />
 
             <TextView
                 android:text="@string/cm"
@@ -243,10 +244,11 @@
                 android:layout_width="wrap_content"
                 android:layout_weight="0"
                 android:layout_gravity="center_vertical|center_horizontal"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:textAlignment="center" />
 
             <TextView
-                android:text="inches"
+                android:text="in"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/lblHeightUnit2"
@@ -270,19 +272,19 @@
 
         <TextView
             android:text="@string/workoutFrequency"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblWorkFreq"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical|center_horizontal"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary" />
 
         <Spinner
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerWorkoutFreq"
-            android:layout_weight="1" />
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical" />
 
     </LinearLayout>
 
@@ -296,19 +298,20 @@
 
         <TextView
             android:text="@string/goals"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblGoals"
-            android:layout_weight="1"
+            android:layout_weight="0.3"
             android:layout_gravity="center_vertical|center_horizontal"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary" />
 
         <Spinner
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerGoals"
-            android:layout_weight="1" />
+            android:layout_weight="0.7"
+            android:layout_gravity="right|center_vertical" />
 
     </LinearLayout>
 
