--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -41,7 +41,7 @@
 
         <TextView
             android:text="@string/dateOfBirth"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblDOB"
             android:textAppearance="@android:style/TextAppearance.Medium"
@@ -50,16 +50,16 @@
             android:layout_gravity="center_vertical|center_horizontal" />
 
         <EditText
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="@string/dateOfBirth"
-            android:ems="10"
+            android:text="@string/dateInitial"
+            android:ems="3"
             android:id="@+id/etxtDateOfBirth"
             android:layout_weight="0.5"
             android:drawableLeft="@drawable/icon_calendar"
             android:drawablePadding="2dp"
-            android:textColor="?attr/colorPrimary" />
+            android:textColor="?attr/colorPrimary"
+            android:layout_width="wrap_content" />
 
     </LinearLayout>
 
