--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -49,18 +49,6 @@
             android:layout_weight="0.5"
             android:layout_gravity="center_vertical|center_horizontal" />
 
-        <EditText
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="@string/dateInitial"
-            android:ems="3"
-            android:id="@+id/etxtDateOfBirth"
-            android:layout_weight="0.5"
-            android:drawableLeft="@drawable/icon_calendar"
-            android:drawablePadding="2dp"
-            android:textColor="?attr/colorPrimary"
-            android:layout_width="wrap_content" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -274,17 +262,17 @@
             android:text="@string/workoutFrequency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/lblWorkFreq"
-            android:layout_gravity="center_vertical|center_horizontal"
+            android:id="@+id/lblWorkoutFreq"
             android:textAppearance="@android:style/TextAppearance.Medium"
-            android:textColor="?attr/colorPrimary" />
+            android:textColor="?attr/colorPrimary"
+            android:layout_weight="0.3" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerWorkoutFreq"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical" />
+            android:layout_gravity="right|center_vertical"
+            android:layout_weight="0.70" />
 
     </LinearLayout>
 
@@ -326,5 +314,17 @@
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:textColor="?attr/colorPrimary"/>
+
+    <EditText
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="@string/dateInitial"
+        android:ems="3"
+        android:id="@+id/etxtDateOfBirth"
+        android:layout_weight="0.5"
+        android:drawableLeft="@drawable/icon_calendar"
+        android:drawablePadding="2dp"
+        android:textColor="?attr/colorPrimary"
+        android:layout_width="match_parent" />
 
 </LinearLayout>
