--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -256,7 +256,8 @@
         android:layout_height="50dp"
         android:id="@+id/linearlayoutWorkoutFreq"
         android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin" >
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:layout_weight="0.8">
 
         <TextView
             android:text="@string/workoutFrequency"
@@ -265,15 +266,15 @@
             android:id="@+id/lblWorkoutFreq"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary"
-            android:layout_weight="0.3" />
+            android:layout_gravity="center" />
 
         <Spinner
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerWorkoutFreq"
-            android:layout_gravity="right|center_vertical"
-            android:layout_weight="0.70" />
-
+            android:layout_gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_weight="0.8"
+            android:textAlignment="textEnd" />
     </LinearLayout>
 
     <LinearLayout
@@ -289,17 +290,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblGoals"
-            android:layout_weight="0.3"
-            android:layout_gravity="center_vertical|center_horizontal"
             android:textAppearance="@android:style/TextAppearance.Medium"
-            android:textColor="?attr/colorPrimary" />
+            android:textColor="?attr/colorPrimary"
+            android:layout_gravity="center" />
 
         <Spinner
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerGoals"
-            android:layout_weight="0.7"
-            android:layout_gravity="right|center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.8"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
