--- a/IIFYM_Tracker/src/main/res/layout/macro_settings_login_screen.xml
+++ b/IIFYM_Tracker/src/main/res/layout/macro_settings_login_screen.xml
@@ -190,18 +190,45 @@
 
     </LinearLayout>
 
-    <CheckBox
-        android:text="Percent"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:id="@+id/chkbxPercentVals"
-        android:layout_gravity="center_vertical|center_horizontal|center"
-        android:checked="true"
-        android:gravity="center_vertical|center_horizontal|center"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:textAppearance="@android:style/TextAppearance.Small"
-        android:textColor="?attr/colorPrimary" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/linearlayoutPercentGrams"
+        android:layout_gravity="center_vertical|center_horizontal">
+
+        <info.hoang8f.android.segmented.SegmentedGroup
+            android:id="@+id/seggroupDisplay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal"
+            app:sc_border_width="2dp"
+            app:sc_corner_radius="10dp"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical|center_horizontal" >
+
+            <RadioButton
+                android:id="@+id/rbtnPercent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Percent"
+                style="@style/RadioButton"
+                android:checked="true"
+                android:layout_gravity="center_vertical|center_horizontal" />
+
+            <RadioButton
+                android:id="@+id/rbtnGrams"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Grams"
+                style="@style/RadioButton"
+                android:layout_gravity="center_vertical|center_horizontal" />
+
+        </info.hoang8f.android.segmented.SegmentedGroup>
+
+    </LinearLayout>
 
     <TextView
         android:text="You can customize your macros and your daily caloric intake to the values you wish!"
