--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -18,18 +18,25 @@
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin" />
 
-    <EditText
-        android:inputType="textPersonName"
-        android:ems="8"
-        android:id="@+id/etxtName"
-        android:hint="@string/firstname"
-        android:textColorHint="?android:attr/textColorHint"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:layout_gravity="left|center_vertical"
-        android:textColor="?attr/colorPrimary"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="14dp" />
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin">
+
+        <EditText
+            android:inputType="textPersonName"
+            android:ems="8"
+            android:id="@+id/etxtName"
+            android:hint="@string/firstname"
+            android:textColorHint="?android:attr/textColorHint"
+            android:textAppearance="@android:style/TextAppearance.Medium"
+            android:textColor="?attr/colorPrimary"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -49,6 +56,20 @@
             android:layout_weight="0.5"
             android:layout_gravity="center_vertical|center_horizontal" />
 
+        <EditText
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="@string/dateInitial"
+            android:ems="3"
+            android:id="@+id/etxtDateOfBirth"
+            android:layout_weight="0.5"
+            android:drawablePadding="10dp"
+            android:textColor="?attr/colorPrimary"
+            android:drawableEnd="@drawable/icon_calendar"
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical|center|end"
+            android:layout_gravity="end" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -61,24 +82,25 @@
 
         <TextView
             android:text="@string/gender"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblGender"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:layout_gravity="center_vertical|center_horizontal"
             android:textColor="?attr/colorPrimary" />
 
         <info.hoang8f.android.segmented.SegmentedGroup
             android:id="@+id/seggroupGender"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="horizontal"
             app:sc_border_width="2dp"
             app:sc_corner_radius="10dp"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical|center_horizontal">
+            android:layout_gravity="right|center"
+            android:layout_weight="0.5"
+            android:gravity="right|center">
 
             <RadioButton
                 android:id="@+id/rbtnGenderMale"
@@ -112,24 +134,25 @@
 
         <TextView
             android:text="@string/unitSystem"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblUnitSystem"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:layout_gravity="center_vertical|center_horizontal"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary" />
 
         <info.hoang8f.android.segmented.SegmentedGroup
             android:id="@+id/seggroupUnitSystem"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="horizontal"
             app:sc_border_width="2dp"
             app:sc_corner_radius="10dp"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical|center_horizontal" >
+            android:layout_gravity="right|center"
+            android:layout_weight="0.5"
+            android:gravity="right|center">
 
             <RadioButton
                 android:id="@+id/rbtnMetric"
@@ -178,8 +201,8 @@
                 android:textColor="?attr/colorPrimary"
                 android:textColorHint="?android:attr/textColorHint"
                 android:layout_weight="0.8"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:layout_gravity="center" />
 
             <TextView
                 android:text="@string/kg"
@@ -189,7 +212,8 @@
                 android:textAppearance="@android:style/TextAppearance.Small"
                 android:textColor="?attr/colorPrimary"
                 android:layout_weight="0.2"
-                android:layout_gravity="center_vertical|center_horizontal" />
+                android:gravity="center"
+                android:layout_gravity="center" />
         </LinearLayout>
 
         <LinearLayout
@@ -208,8 +232,9 @@
                 android:textColorHint="?android:attr/textColorHint"
                 android:layout_width="wrap_content"
                 android:layout_weight="0.8"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:textAlignment="center" />
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:gravity="center" />
 
             <TextView
                 android:text="@string/cm"
@@ -220,7 +245,8 @@
                 android:textColor="?attr/colorPrimary"
                 android:layout_weight="0.2"
                 android:layout_gravity="center_vertical|center_horizontal"
-                android:visibility="visible" />
+                android:visibility="visible"
+                android:gravity="center" />
 
             <EditText
                 android:layout_height="wrap_content"
@@ -231,9 +257,10 @@
                 android:textColorHint="?android:attr/textColorHint"
                 android:layout_width="wrap_content"
                 android:layout_weight="0"
-                android:layout_gravity="center_vertical|center_horizontal"
                 android:visibility="gone"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_gravity="center" />
 
             <TextView
                 android:text="in"
@@ -243,8 +270,9 @@
                 android:textAppearance="@android:style/TextAppearance.Small"
                 android:textColor="?attr/colorPrimary"
                 android:layout_weight="0"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:gravity="center"
+                android:layout_gravity="center" />
 
         </LinearLayout>
 
@@ -256,8 +284,7 @@
         android:layout_height="50dp"
         android:id="@+id/linearlayoutWorkoutFreq"
         android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:layout_weight="0.8">
+        android:paddingEnd="@dimen/activity_horizontal_margin">
 
         <TextView
             android:text="@string/workoutFrequency"
@@ -271,10 +298,11 @@
         <Spinner
             android:layout_height="wrap_content"
             android:id="@+id/spinnerWorkoutFreq"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="right|center_vertical"
             android:layout_width="match_parent"
             android:layout_weight="0.8"
-            android:textAlignment="textEnd" />
+            android:textAlignment="textEnd"
+            android:gravity="right|center_vertical" />
     </LinearLayout>
 
     <LinearLayout
@@ -298,9 +326,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerGoals"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="right|center_vertical"
             android:layout_weight="0.8"
-            android:textAlignment="textEnd" />
+            android:textAlignment="textEnd"
+            android:gravity="right|center_vertical" />
 
     </LinearLayout>
 
@@ -314,18 +343,7 @@
         android:textColorHint="?attr/colorPrimary"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:textColor="?attr/colorPrimary"/>
-
-    <EditText
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/dateInitial"
-        android:ems="3"
-        android:id="@+id/etxtDateOfBirth"
-        android:layout_weight="0.5"
-        android:drawableLeft="@drawable/icon_calendar"
-        android:drawablePadding="2dp"
         android:textColor="?attr/colorPrimary"
-        android:layout_width="match_parent" />
+        android:layout_marginTop="@dimen/activity_horizontal_margin" />
 
 </LinearLayout>
