--- a/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:id="@+id/lblMacroBanner"
         android:textAppearance="@android:style/TextAppearance.Medium"
-        android:text="IIFYM recommends the following energy and macronutrient daily intake"
+        android:text="@string/userMacros_MacroRecommendation"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:paddingTop="@dimen/activity_vertical_margin"
@@ -27,19 +27,19 @@
         android:paddingEnd="@dimen/activity_horizontal_margin">
 
         <TextView
-            android:text="Calories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblCalories"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary"
             android:layout_weight="1"
-            android:layout_gravity="center_vertical|center_horizontal" />
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="@string/Calories" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number|numberDecimal"
+            android:inputType="number"
             android:ems="1"
             android:id="@+id/etxtCalories"
             android:textAppearance="@android:style/TextAppearance.Medium"
@@ -68,7 +68,7 @@
         android:id="@+id/linearlayoutCarbs">
 
         <TextView
-            android:text="Carbs"
+            android:text="@string/Carbs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblCarbs"
@@ -82,7 +82,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number|numberDecimal"
+            android:inputType="number"
             android:ems="1"
             android:id="@+id/etxtCarbs"
             android:textAppearance="@android:style/TextAppearance.Medium"
@@ -111,7 +111,7 @@
         android:id="@+id/linearlayoutProtein">
 
         <TextView
-            android:text="Protein"
+            android:text="@string/Protein"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblProtein"
@@ -125,7 +125,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number|numberDecimal"
+            android:inputType="number"
             android:ems="1"
             android:id="@+id/etxtProtein"
             android:textAppearance="@android:style/TextAppearance.Medium"
@@ -154,7 +154,7 @@
         android:id="@+id/linearlayoutFat">
 
         <TextView
-            android:text="Fat"
+            android:text="@string/Fat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblFat"
@@ -168,7 +168,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number|numberDecimal"
+            android:inputType="number"
             android:ems="1"
             android:id="@+id/etxtFat"
             android:textAppearance="@android:style/TextAppearance.Medium"
@@ -204,7 +204,6 @@
         android:textColor="?attr/colorPrimary" />
 
     <TextView
-        android:text="You can customize your macros and your daily caloric intake to the values you wish!"
         android:layout_width="wrap_content"
         android:id="@+id/kandy_textview"
         android:textAppearance="@android:style/TextAppearance.Small"
@@ -213,10 +212,11 @@
         android:paddingStart="75dp"
         android:paddingEnd="75dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="15dp" />
+        android:layout_marginBottom="15dp"
+        android:text="@string/userMacros_FeelFree" />
 
     <Button
-        android:text="Finish"
+        android:text="@string/btnFinish"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:id="@+id/btnCalc"
