--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -30,12 +30,12 @@
             android:ems="8"
             android:id="@+id/etxtName"
             android:hint="@string/firstname"
-            android:textColorHint="?android:attr/textColorHint"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textColorHint="?android:attr/textColorHint" />
     </LinearLayout>
 
     <LinearLayout
