Further implemented activityUserMacros

--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -234,7 +234,8 @@
                 android:layout_weight="0.8"
                 android:layout_gravity="center"
                 android:textAlignment="center"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textColor="?attr/colorPrimary" />
 
             <TextView
                 android:text="@string/cm"
