--- a/IIFYM_Tracker/src/main/res/values/colors.xml
+++ b/IIFYM_Tracker/src/main/res/values/colors.xml
@@ -22,4 +22,7 @@
     <color name="radio_button_selected_color">#1f3972</color>
     <color name="radio_button_unselected_color">#FFFFFF</color>
     <color name="SegmentedGroup_sc_unchecked_tint_color">#FFFFFF</color>
+    <color name="Custom_Gray">#8a000000</color>
+    <color name="Custom_Red">#D5000000</color>
+    <color name="Custom_Green">##2E7D32</color>
 </resources>
