--- a/IIFYM_Tracker/src/main/res/values/colors.xml
+++ b/IIFYM_Tracker/src/main/res/values/colors.xml
@@ -24,5 +24,5 @@
     <color name="SegmentedGroup_sc_unchecked_tint_color">#FFFFFF</color>
     <color name="Custom_Gray">#8a000000</color>
     <color name="Custom_Red">#D5000000</color>
-    <color name="Custom_Green">##2E7D32</color>
+    <color name="Custom_Green">#2E7D32</color>
 </resources>
