--- a/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
@@ -6,37 +6,43 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:id="@+id/lblMacroBanner"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:text="@string/userMacros_MacroRecommendation"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:paddingStart="25dp"
-        android:paddingEnd="25dp"
-        android:textColor="?attr/colorPrimary"
-        android:layout_marginTop="10dp"
-        android:layout_height="75dp" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
 
-    <LinearLayout
-        android:orientation="horizontal"
+        <TextView
+            android:text="@string/UserMacrosTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lblTitle"
+            android:layout_weight="1"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            android:textAlignment="center"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textStyle="normal|bold" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:id="@+id/linearlayoutPercentGrams"
-        android:layout_gravity="center_vertical|center_horizontal|center"
-        android:gravity="center_vertical|center_horizontal|center"
-        android:layout_weight="0.37"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="@dimen/activity_vertical_margin">
 
         <info.hoang8f.android.segmented.SegmentedGroup
             android:id="@+id/seggroupDisplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:orientation="horizontal"
             app:sc_border_width="2dp"
             app:sc_corner_radius="10dp"
-            android:layout_gravity="center_vertical|center_horizontal" >
+            android:layout_gravity="center_vertical|center_horizontal|center"
+            android:layout_weight="1"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
 
             <RadioButton
                 android:id="@+id/rbtnCalories"
@@ -58,7 +64,7 @@
 
         </info.hoang8f.android.segmented.SegmentedGroup>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -90,7 +96,8 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center_vertical|center"
             android:text="xy"
-            android:layout_weight="0.25" />
+            android:layout_weight="0.25"
+            android:maxLength="5" />
 
         <TextView
             android:text="@string/symbolKcal"
@@ -103,15 +110,21 @@
             android:gravity="center_vertical|center"
             android:layout_weight="0.25" />
 
-        <Button
-            android:text="@string/btnReset"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:id="@+id/btnReset"
-            android:background="@drawable/btn_iifym_style"
-            android:layout_gravity="center_vertical|center_horizontal|center"
-            android:gravity="center_vertical|center_horizontal|center"
-            android:layout_weight="0.25"
-            android:layout_height="25dp" />
+            android:layout_height="match_parent"
+            android:layout_weight="0.25">
+
+            <ImageButton
+                android:id="@+id/btn_info"
+                android:layout_gravity="right"
+                android:background="@drawable/icon_info"
+                android:layout_height="24dp"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:layout_width="24dp" />
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -146,7 +159,8 @@
             android:layout_weight="0.25"
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center_vertical|center"
-            android:text="50" />
+            android:text="50"
+            android:maxLength="4" />
 
         <TextView
             android:text="@string/symbolPercent"
@@ -201,7 +215,8 @@
             android:layout_weight="0.25"
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center"
-            android:text="25" />
+            android:text="25"
+            android:maxLength="4" />
 
         <TextView
             android:text="@string/symbolPercent"
@@ -256,7 +271,8 @@
             android:layout_weight="0.25"
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center_vertical|center"
-            android:text="25" />
+            android:text="25"
+            android:maxLength="4" />
 
         <TextView
             android:text="@string/symbolPercent"
@@ -324,36 +340,42 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center" />
 
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/Filler"
-            android:layout_weight="0.25"
-            android:gravity="center"
-            android:visibility="invisible" />
+            android:layout_height="match_parent"
+            android:layout_weight="0.25">
+
+            <ImageButton
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                app:srcCompat="@drawable/icon_reset"
+                android:id="@+id/btnReset"
+                android:background="@drawable/icon_reset"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
 
     </LinearLayout>
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:id="@+id/kandy_textview"
-        android:textAppearance="@android:style/TextAppearance.Small"
-        android:gravity="center_vertical|center_horizontal|center"
-        android:layout_gravity="center_vertical|center_horizontal|center"
-        android:layout_height="50dp"
-        android:layout_marginBottom="15dp"
-        android:text="@string/userMacros_FeelFree" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:text="@string/btnFinish"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:id="@+id/btnFinish"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:background="@drawable/btn_iifym_style"
-        android:textColorHint="?attr/colorPrimary"
-        android:textColor="?attr/colorPrimary"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin" />
+        <Button
+            android:text="@string/btnFinish"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnFinish"
+            android:background="@drawable/btn_iifym_style"
+            android:textColorHint="?attr/colorPrimary"
+            android:textColor="?attr/colorPrimary"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:layout_gravity="center_vertical|center_horizontal|center"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="15dp" />
+
+    </RelativeLayout>
 
 </LinearLayout>
