Continued more on activityUserMacros.java

--- a/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
@@ -374,7 +374,9 @@
             android:layout_gravity="center_vertical|center_horizontal|center"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="15dp" />
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin" />
 
     </RelativeLayout>
 
